--- a/fils-rouges/assets/css/style.css
+++ b/fils-rouges/assets/css/style.css
@@ -163,7 +163,7 @@ small {
 
 P {
     text-align: center;
-    width: 80%;
+    width: 9 0%;
     font-size: 1.2rem;
 
 }
@@ -195,6 +195,21 @@ P {
     margin-bottom: var(--spacing-s) !important;
 }
 
+#demo {
+    font-size: 1.5rem !important;
+    border: 2px dashed white;
+    border-radius: 999px;
+    padding: 11px 16px 8px 16px;
+    font-size: 3vw;
+    margin: 20px 0;
+    z-index: 1;
+    text-transform: lowercase !important;
+
+    background-color: var(--color-primary);
+    box-shadow: 0 0 3px var(--color-primary);
+
+}
+
 /* OVERLAYS */
 .box {
     margin: auto;
@@ -216,7 +231,6 @@ P {
 
     z-index: 2;
 
-    display: none;
 }
 
 .hide {
@@ -235,6 +249,10 @@ P {
 .overlayg {
     left: 0;
     width: calc(50vw + 1px);
+}
+
+#prog {
+    display: none;
 }
 
 
@@ -333,7 +351,7 @@ P {
     /* background-color: white; */
     border: 1.5px dashed white;
 
-    display: none;
+    /* display: none; */
 }
 
 .one {
@@ -379,98 +397,6 @@ P {
 .need-rotation img {
     width: 50%;
     max-width: 180px;
-}
-
-@media screen and (max-width: 700px) {
-    h1 {
-        -webkit-transform: rotate(-180deg);
-        -ms-transform: rotate(-180deg);
-        transform: rotate(-180deg);
-        width: -webkit-fit-content;
-        width: -moz-fit-content;
-        width: fit-content;
-        -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
-        writing-mode: vertical-rl;
-        left: var(--spacing-s);
-        top: 0;
-        height: calc(var(--vh, 1vh) * 100);
-        text-align: center;
-    }
-
-    h2 {
-        -webkit-writing-mode: vertical-rl;
-        -ms-writing-mode: tb-rl;
-        writing-mode: vertical-rl;
-        right: var(--spacing-s);
-        top: 0;
-        width: inherit;
-        height: calc(var(--vh, 1vh) * 100);
-        text-align: center;
-    }
-
-    p {
-        width: 100%;
-    }
-
-    .normal {
-        font-size: var(--font-small);
-    }
-
-    .one {
-        top: 0;
-        left: 50vw;
-    }
-
-    .two {
-        display: none;
-    }
-
-    .three {
-        display: none;
-    }
-
-    .box {
-        width: 100vw !important;
-        height: calc(var(--vh, 1vh) * 50);
-        background-image: url(../red_hor.svg) !important;
-    }
-
-    .overlayd {
-        top: 0;
-    }
-
-    .overlayg {
-        bottom: 0px;
-        height: calc(var(--vh, 1vh) * 100 + 1px);
-    }
-
-    .block {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -ms-flex-pack: distribute;
-        justify-content: space-around;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-        flex-direction: column;
-        height: calc(var(--vh, 1vh) * 100);
-        width: 100vw;
-    }
-
-    .cote {
-        height: calc(var(--vh, 1vh) * 45);
-        width: calc(var(--vh, 1vh) * 45);
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-    }
-
-
 }
 
 
