--- a/para-mateo/assets/css/style.css
+++ b/para-mateo/assets/css/style.css
@@ -25,7 +25,7 @@ p {
   justify-content: space-between;
   align-items: center;
 
-  background-color: lightcoral;
+  background-color: crimson;
   border-radius: 20px;
   margin: 5px;
   flex-direction: column;
