--- a/pages/assets/css/style.css
+++ b/pages/assets/css/style.css
@@ -75,7 +75,7 @@ h2 {
   display: flex;
   flex-direction: column;
   border-radius: 7px;
-  background-color: orangered;
+  background-color: snow;
   box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25);
   transform: perspective(25rem) rotateX(-25deg);
   transition: var(--tran-short);
@@ -83,6 +83,8 @@ h2 {
 
 .block:hover {
   box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.1);
+  background-color: lime;
+
 
   cursor: pointer;
   transform: perspective(20em) rotateX(0deg);
@@ -156,6 +158,13 @@ h2 {
 }
 
 .show {
-  display: revert;
+  display: inline-grid;
   transition: var(--tran-short);
+}
+
+
+@media screen and (max-width: 600px) {
+  .block {
+    width: 90%;
+  }
 }
