--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
   --spacing-m: 25px;
   --spacing-s: 17px;
 
+  --thisColor: greenyellow;
   --white: snow;
   --highlight: rgb(203, 203, 203);
   --dark: dimgray;
@@ -91,12 +92,12 @@ SCREEN HOME
   z-index: 2;
   position: relative;
   display: inline-block;
-  -webkit-backdrop-filter: blur(4px) saturate(100%);
-  backdrop-filter: blur(4px) saturate(100%);
+  -webkit-backdrop-filter: blur(8px) saturate(100%);
+  backdrop-filter: blur(8px) saturate(100%);
   background-color: #fffafa69;
   margin-bottom: calc(var(--vh, 1vh) * 100);
   bottom: 0;
-  border-radius: 0 0 50px 50px;
+  border-radius: 0 0 20px 20px;
   -webkit-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   -o-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   transition: all .5s cubic-bezier(.55, 0, .07, 1);
@@ -164,7 +165,11 @@ MENU
   /* display: none; */
 }
 
-#circle {
+.enter {
+  z-index: 999;
+}
+
+.identity {
   background-color: var(--thisColor);
   height: 45px;
   width: 45px;
@@ -182,6 +187,15 @@ MENU
   animation-iteration-count: infinite;
   -webkit-animation-delay: 0ms;
   animation-delay: 0ms;
+
+  color: black;
+  border-radius: 50%;
+  border: none;
+  text-align: center;
+  font-size: 1rem;
+
+  transition: var(--tran-short);
+  outline: none;
 
 }
 
@@ -211,12 +225,9 @@ MENU
 
 
 #meCircle {
-  opacity: 0;
   -webkit-transform: rotate(-120deg);
   -ms-transform: rotate(-120deg);
   transform: rotate(-120deg);
-  height: 101%;
-  width: 101%;
   border-radius: 100%;
   -webkit-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   -o-transition: all .5s cubic-bezier(.55, 0, .07, 1);
@@ -226,6 +237,10 @@ MENU
 }
 
 .circling {
+
+  background-image: url(../me.jpg);
+  background-size: cover;
+
   opacity: 1 !important;
   -webkit-transform: rotate(0deg) !important;
   -ms-transform: rotate(0deg) !important;
@@ -385,193 +400,115 @@ NOW
 PROJETS HOME
 -------------------------------------- */
 
-.second {
+
+h2 {
+  margin: 0;
+  padding: 1px;
+  text-align: center;
+  font-size: .8rem;
+  border-radius: 10px 10px 0 0;
+  text-transform: capitalize;
+}
+
+.grid {
   position: fixed;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 1fr 40px 1fr;
-  grid-template-columns: repeat(2, 1fr);
-  -webkit-column-gap: 40px;
-  -moz-column-gap: 40px;
-  column-gap: 40px;
-  row-gap: 50px;
-  z-index: 1;
-  padding: 100px 40px 40px 40px;
-  /*! position: fixed; */
   top: 0;
   overflow-y: scroll;
   width: 100dvw;
   height: 100dvh;
-}
+  align-content: start;
 
-.projects {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  row-gap: 12px;
-  -webkit-box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
-  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.2);
-  background-color: var(--white);
-  border-radius: var(--radius-hard);
-  padding: var(--spacing-s);
-  height: 90%;
-  overflow: scroll;
-  max-width: 500px;
-}
 
-.projects>a {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 40px;
-  gap: 10px;
-  -webkit-box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.1);
-  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.1);
-  background-color: var(--white);
-  border-radius: var(--radius-soft);
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  padding-right: var(--spacing-s);
+  padding: 50px 20px 20px 20px;
+  background-color: dimgray;
 
-}
-
-.projects>a>div {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  gap: var(--spacing-s);
-}
-
-.projects>a:hover {
-  -webkit-box-shadow: inset 0 0px 10px var(--highlight);
-  box-shadow: inset 0 0px 10px var(--highlight);
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
-
-.wip {
-  -webkit-box-shadow: inset 0 0px 10px orange;
-  box-shadow: inset 0 0px 10px orange
-}
-
-.second a:hover {
-  cursor: ne-resize;
-}
-
-.projects img {
-  width: auto;
-  height: 40px;
-
-  border-radius: 10px;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  aspect-ratio: 4/3;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-
-.projects span {
-  color: var(--highlight);
-  font-size: 80%;
-
-}
-
-.others {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr var(--spacing-s) 1fr var(--spacing-s) 1fr;
-  grid-template-columns: repeat(3, 1fr);
-  -webkit-column-gap: var(--spacing-s);
-  -moz-column-gap: var(--spacing-s);
-  column-gap: var(--spacing-s);
-  row-gap: var(--spacing-s);
+  justify-items: center;
+  row-gap: 2rem;
+  padding: 2rem;
+  grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+
 }
 
-.others img {
+.block {
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 7px;
+  background-color: snow;
+  box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25);
+  transform: perspective(25rem) rotateX(-25deg);
+  transition: var(--tran-short);
+}
+
+.block:hover {
+  box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.1);
+  background-color: var(--thisColor);
+
+
+  cursor: pointer;
+  transform: perspective(20em) rotateX(0deg);
+  transition: var(--tran-short);
+}
+
+
+.block img {
+  /*! height: 100%; */
   width: 100%;
-  height: auto;
-
-  border-radius: 10px;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  aspect-ratio: 3/2;
-  -o-object-fit: cover;
   object-fit: cover;
+  border-radius: 0 0 7px 7px;
 }
 
-.others a:hover {
-  opacity: .7;
-}
 
 
 /* -----------------------------------
-MO
+  PASSWORD PROTECTION
 -------------------------------------- */
-td>a {
-  text-decoration: underline;
+
+.badpass {
+  font-size: 3rem !important;
+  height: 100% !important;
+  width: 100% !important;
+  bottom: 2px !important;
+  right: calc(50vw - 50vh) !important;
+  position: fixed !important;
+  max-width: 100vw !important;
+  transform: rotate(0deg) !important;
+  top: 0;
+  left: 0;
+
+  background-color: var(--thisColor) !important;
+background-image: none;
 }
 
-.center {
-  min-height: calc(100vh);
-  width: calc(100vw);
-  max-width: 600px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: auto;
-  -webkit-box-align: flex-start;
-  -ms-flex-align: flex-start;
-  align-items: flex-start;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  z-index: 2;
-  position: relative;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  padding: 20px;
+.secret {
+  display: none;
+  box-shadow: 0px 3px 20px greenyellow;
 }
 
-.center p {
-  margin-bottom: 20px;
+.secret:hover {
+  box-shadow: 0px 0px 10px greenyellow;
+
 }
 
-.center a {
-  margin-top: var(--spacing-s);
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  border: 1px solid black;
-  padding: 2px 6px;
-  border-radius: 15px;
-  text-decoration: none;
-  line-height: 1.7;
-  word-wrap: anywhere;
+
+.hide {
+  opacity: 0;
+  transition: var(--tran-short);
 }
 
-.center a:hover {
-  background-color: black;
-  color: white;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+.show {
+  display: inline-grid;
+  transition: var(--tran-short);
+}
+
+
+@media screen and (max-width: 600px) {
+  .block {
+    width: 90%;
+  }
+
+  .grid {
+    row-gap: 1rem;
+  }
 }
