--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
 
   html {
     font-size: 1rem;
@@ -24,9 +24,16 @@
     margin: var(--spacing-s) 10px var(--spacing-s) var(--spacing-s);
   }
 
-  .second {
-    padding: 50px 20px 20px 20px;
-    height: calc(var(--vh, 1vh) * 100);
+  .now {
+    padding: var(--spacing-l) var(--spacing-s) var(--spacing-s) var(--spacing-s);
+  }
+
+  .block {
+    width: 90%;
+  }
+
+  .grid {
+    row-gap: 1rem;
   }
 
 }
