--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@
   --spacing-m: 25px;
   --spacing-s: 17px;
 
-  --thisColor: greenyellow;
+  --thisColor: lightskyblue;
   --white: snow;
   --highlight: rgb(203, 203, 203);
   --dark: dimgray;
@@ -86,7 +86,7 @@ p {
 /* -----------------------------------
 SCREEN HOME
 -------------------------------------- */
-.screen-home {
+.front {
   height: calc(var(--vh, 1vh) * 100);
   width: 100vw;
   z-index: 2;
@@ -232,12 +232,9 @@ MENU
   -webkit-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   -o-transition: all .5s cubic-bezier(.55, 0, .07, 1);
   transition: all .5s cubic-bezier(.55, 0, .07, 1);
-  ;
-
 }
 
 .circling {
-
   background-image: url(../me.jpg);
   background-size: cover;
 
@@ -254,48 +251,14 @@ MENU
 .menu span {
   padding: 8px var(--spacing-s) 8px calc(var(--spacing-s) + 10px);
   font-size: var(--font-small);
-
   margin-left: -17px;
-
   background-color: snow;
   border-radius: var(--radius-soft);
-
   -webkit-box-shadow: 0 0 20px var(--highlight);
-
   box-shadow: 0 0 20px var(--highlight);
-
   z-index: 2;
 }
 
-.left a {
-  color: inherit;
-  text-decoration: none;
-  background-color: var(--grey);
-  padding: 10px 24px;
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-  border-right: 1px solid var(--grey-dark);
-  height: 50px;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.left a:hover {
-  background-color: var(--dark);
-  -webkit-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
-}
-
-.left a:nth-child(5) {
-  border-radius: 0 var(--radius-soft) var(--radius-soft) 0;
-  border-right: none;
-}
 
 /* -----------------------------------
 CARD STUFF
@@ -322,8 +285,8 @@ CARD STUFF
 }
 
 .card-text img {
-  max-height: 60px;
-  max-width: 60px;
+  max-height: 80px;
+  max-width: 80px;
   float: right;
   border-radius: 50%;
   margin: var(--spacing-m) var(--spacing-m) var(--spacing-s) 0;
@@ -377,8 +340,9 @@ CARD STUFF
 NOW
 -------------------------------------- */
 .now {
-  padding: var(--spacing-s);
-  max-width: 510px;
+  padding: var(--spacing-l);
+  /*! margin: 0 3vw; */
+  color: white;
 }
 
 .now a {
@@ -399,8 +363,6 @@ NOW
 /* -----------------------------------
 PROJETS HOME
 -------------------------------------- */
-
-
 h2 {
   margin: 0;
   padding: 1px;
@@ -410,24 +372,22 @@ h2 {
   text-transform: capitalize;
 }
 
-.grid {
+.back {
   position: fixed;
   top: 0;
   overflow-y: scroll;
   width: 100dvw;
   height: 100dvh;
   align-content: start;
-
-
-  padding: 50px 20px 20px 20px;
+  padding: 60px 20px 20px 20px;
   background-color: dimgray;
+}
 
+.grid {
   display: grid;
   justify-items: center;
   row-gap: 2rem;
-  padding: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
-
 }
 
 .block {
@@ -444,8 +404,6 @@ h2 {
 .block:hover {
   box-shadow: 0px 0px 10px hsla(0, 0%, 0%, 0.1);
   background-color: var(--thisColor);
-
-
   cursor: pointer;
   transform: perspective(20em) rotateX(0deg);
   transition: var(--tran-short);
@@ -459,7 +417,63 @@ h2 {
   border-radius: 0 0 7px 7px;
 }
 
+/* -----------------------------------
+SCREEN NIGHT
+-------------------------------------- */
+#screen-night{
+  height: 100%;
+  width: 100%;
+  background-color: black;
+  top: 0; left: 0;
+  position: fixed;
+  z-index: 999;
+  color: snow;
+  align-items: center;
+  justify-content: center;
+  display: none;
+  font-size: 2rem;
+}
 
+#screen-night p{
+  border: 1px solid snow;
+  border-radius: var(--radius-hard);
+  width: fit-content;
+  padding: 4px var(--spacing-s) 2px var(--spacing-s);
+}
+
+.itsnight{
+  display: flex !important;
+}
+
+/* -----------------------------------
+MAIL STUFF
+-------------------------------------- */
+#mailcopied{
+  height: auto;
+  background: hsl(0, 0%, 97%);
+  border-radius: 0 0 var(--radius-hard) var(--radius-hard);
+  padding: 13px var(--spacing-s) var(--spacing-s) var(--spacing-s);
+  z-index: 1;
+  width: 80%;
+  text-align: center;
+  background-color: tomato;
+  transform: translateY(-100%);
+  position: relative;
+  color: black;
+  font-size: var(--font-normal);
+  z-index: 1;
+  }
+
+.mailappear{
+  transform:  translateY(0%) !important;
+  box-shadow: 0 0 20px hsla(0, 0%, 0%, 0.5);
+  transition: all .5s ease-in-out;
+}
+
+.mailexit{
+  transform: translate(-50%,80%);
+  transition: all .5s ease-in-out;
+}
 
 /* -----------------------------------
   PASSWORD PROTECTION
@@ -491,7 +505,6 @@ background-image: none;
 
 }
 
-
 .hide {
   opacity: 0;
   transition: var(--tran-short);
@@ -500,15 +513,4 @@ background-image: none;
 .show {
   display: inline-grid;
   transition: var(--tran-short);
-}
-
-
-@media screen and (max-width: 600px) {
-  .block {
-    width: 90%;
-  }
-
-  .grid {
-    row-gap: 1rem;
-  }
 }
