--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -419,6 +419,7 @@ h2 {
   justify-items: center;
   row-gap: 2rem;
   grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+  padding-top: var(--spacing-s);
 }
 
 .block {
@@ -427,6 +428,7 @@ h2 {
   flex-direction: column;
   border-radius: 7px;
   background-color: snow;
+  color: black;
   box-shadow: 0px 3px 20px hsla(0, 0%, 0%, 0.25);
   transform: perspective(25rem) rotateX(-25deg);
   transition: var(--tran-short);
@@ -531,8 +533,9 @@ details {
   padding: var(--spacing-s);
   transition: all .3s ease-in-out;
   color: var(--white);
+  margin: var(--spacing-l);
 }
 
 summary {
-  padding-bottom: var(--spacing-s);
+  /*! padding-bottom: var(--spacing-s); */
 }
