--- a/assets/css/mobile.css
+++ b/assets/css/mobile.css
@@ -36,4 +36,7 @@
     row-gap: 1rem;
   }
 
-}
+  details {
+    margin: var(--spacing-l) var(--spacing-s) var(--spacing-s) var(--spacing-s);
+  }
+  }
